# python-rest-flask

./: .env  .env.development  .env.homolog  .env.production  .env.test  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
app/: __init__.py  config.py  containers.py  swagger_template.py
app/adapters/clients/: car_function_client_impl.py
app/adapters/event_bus/: rabbitmq_event_bus.py
app/adapters/repositories/: api_client_repository_impl.py  db.py  produto_repository_impl.py  sqlalchemy_models.py  user_repository_impl.py
app/application/dtos/: error_response.py  produto_dto.py
app/application/services/: apikey_service.py  produto_service.py  user_service.py
app/domain/core/: result.py
app/domain/entities/: api_client.py  produto.py  user.py
app/domain/ports/: api_client_repository.py  car_function_client.py  event_bus.py  produto_repository.py  user_repository.py
app/routes/: produto_routes.py  response_manager.py  user_routes.py
app/routes/decorators/: api_key_required.py
app/workers/: produto_worker.py
